--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,7 +19,7 @@ RUN apt-get update \
 
 # Install Python dependencies
 COPY requirements /app/requirements
-RUN pip install --no-cache-dir -r requirements/production.txt
+RUN pip install --no-cache-dir -r requirements/base.txt
 
 # Copy project
 COPY . /app/
