--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,11 +5,18 @@ services:
     build:
       context: ..
       dockerfile: docker/Dockerfile
-    command: python manage.py runserver 0.0.0.0:8000
+    command: python server.py runserver 0.0.0.0:8000
     volumes:
       - ..:/app
     ports:
       - "8000:8000"
+    environment:
+      - POSTGRES_DB=movie_dashboard
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
+      - PYTHONPATH=/app
     env_file:
       - ../.env
     depends_on:
