Updated env example

--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,11 @@ SECRET_KEY='django-insecure-n+d*%acsyx!&r1i1%=3o%80e0orz1j=x(w#_*p2a+08ruws5_l'
 POSTGRES_DB=movie_dashboard
 POSTGRES_USER=your_postgres_user
 POSTGRES_PASSWORD=your_postgres_password
-POSTGRES_HOST=db
+POSTGRES_HOST= db  # localhost or your_postgres_host and "db" for Docker
 POSTGRES_PORT=5432
 
 # CORS Settings
-CORS_ALLOWED_ORIGINS=http://localhost:5173
+CORS_ALLOWED_ORIGINS=http://localhost:5173 # Your frontend URL
 
 # Static Files
 STATIC_URL=static/ 
